# All-22-Atlas-A22A-

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  schedule.yml
a22a/: __init__.py
a22a/backtest/: __init__.py  metrics.py  run.py
a22a/context/: __init__.py  game_state.py
a22a/data/: contracts.py  ingest.py  sample_data.py
a22a/decision/: __init__.py  portfolio.py  selectivity.py
a22a/features/: build.py
a22a/health/: __init__.py  injury_model.py
a22a/impact/: __init__.py  player_value.py
a22a/market/: __init__.py  clients.py  clv.py  ingest.py  normalize.py
a22a/market/clients/: __init__.py  base.py  sgo_client.py  theodds_client.py
a22a/meta/: __init__.py  blend.py  calibrate.py  conformal.py  run.py
a22a/metrics/: __init__.py  calibration.py  health.py  impact.py  market.py  portfolio.py  selection.py  strategy.py
a22a/models/: team_strength.py  train_baseline.py
a22a/monitor/: __init__.py  alerts.py  run.py
a22a/portfolio/: __init__.py  optimize.py
a22a/reports/: __init__.py  app.py  compile.py  smoke.py  sources.py  weekly.py
a22a/roster/: __init__.py  depth_logic.py
a22a/sim/: run.py
a22a/store/: __init__.py  metrics_store.py
a22a/strategy/: __init__.py  coach_adapt.py
a22a/tools/: doctor.py
a22a/units/: __init__.py  synergy.py  uer.py
a22a/utils/: pandas_compat.py
configs/: defaults.yaml  seeds.yaml  slo.yaml  team_strength.yaml
scripts/: run_pipeline.sh
tests/: test_backtest_smoke.py  test_clv.py  test_container_smoke.py  test_context.py  test_decision.py  test_depth.py  test_doctor.py  test_impact.py  test_injuries.py  test_market_ingest.py  test_meta.py  test_monitor_smoke.py  test_pandas_compat.py  test_portfolio.py  test_reports_smoke.py  test_strategy.py  test_uer.py
