[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a22a"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "polars>=1.6",
  "duckdb>=1.0",
  "scikit-learn>=1.5",
  "lightgbm>=4.3",
  "catboost>=1.2",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "meteostat>=1.6",
  "requests>=2.32",
  "tqdm>=4.66",
  "pytest>=8",
  "pytest-cov>=5",
]

[tool.setuptools.packages.find]
include = ["a22a*"]

[tool.pytest.ini_options]
addopts = "-q"
